AMBARI-975. Fix support for cascading updates to configs. (Hitesh Shah via mahadev)
git-svn-id: https://svn.apache.org/repos/asf/incubator/ambari/branches/AMBARI-666@1406494 13f79535-47bb-0310-9956-ffa450edef68